--- a/index.html
+++ b/index.html
@@ -77,11 +77,9 @@
     <div class="main-product">
       <section>
         <div class="main-first-product">
-          <img
-            class="first-product-img"
-            src="./assets/images/home.png"
-            alt=""
-          />
+          <div class="first-product-img">
+            <img src="./assets/images/home.png" alt="" />
+          </div>
 
           <div class="info-first-product">
             <h1>New Sweatshirt <br /><span>COLLECTION 2022</span></h1>
