--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
           </g>
         </svg>
 
-        <div class="store"><h2>STORE</h2></div>
+        <div class="menu">
+          <a><span>STORE</span></a>
+          <a href="#home">Home</a>
+          <a href="#show-products">Products</a>
+        </div>
 
         <div class="icons-wrapper">
           <i class="bx bx-moon bx-sm" id="mode-btn"></i>
@@ -75,7 +79,7 @@
     </header>
 
     <div class="main-product">
-      <section>
+      <section id="home">
         <div class="main-first-product">
           <div class="first-product-img">
             <img src="./assets/images/home.png" alt="" />
@@ -94,7 +98,7 @@
       </section>
     </div>
 
-    <div class="main-show-products">
+    <div class="main-show-products" id="show-products">
       <div class="show-products">
         <div>
           <a
@@ -138,7 +142,7 @@
         </button>
         <div class="show-products3">
           <div>
-            <h4>$14.00 <span>| Stock: 1</span></h4>
+            <h4>$14.00 <span>| Stock: 10</span></h4>
           </div>
           <div>
             <h4>Hoodies</h4>
@@ -155,7 +159,7 @@
         </button>
         <div class="show-products3">
           <div>
-            <h4>$24.00 <span>| Stock: 10</span></h4>
+            <h4>$24.00 <span>| Stock: 15</span></h4>
           </div>
           <div>
             <h4>Shirts</h4>
@@ -172,7 +176,7 @@
         </button>
         <div class="show-products3">
           <div>
-            <h4>$24.00 <span>| Stock: 18</span></h4>
+            <h4>$24.00 <span>| Stock: 20</span></h4>
           </div>
           <div>
             <h4>Sweatshirts</h4>
@@ -237,11 +241,12 @@
             product page.</span
           >
         </div>
-        <!--
-              Contenido del carrito
-          -->
       </div>
     </div>
+
+    <!--
+              Contenido del carrito
+          -->
 
     <script src="./assets/js/main.js"></script>
   </body>
