--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </g>
         </svg>
 
-        <div class="menu">
+        <div class="menu-bar">
           <a><span>STORE</span></a>
           <a href="#home">Home</a>
           <a href="#show-products">Products</a>
@@ -219,6 +219,20 @@
         <footer>&copy; ACADEMLO. All rights reserved</footer>
       </div>
     </section>
+
+    <div class="menu-container hide" id="menu-container">
+      <div class="menu" id="menu">
+        <div class="menu-cart">
+          <a href="#home" class="home-container hide" id="home-btn">Home</a>
+          <a href="#show-products" class="products-container" id="products-btn"
+            >Products</a
+          >
+        </div>
+        <div class="menu-close" id="close-menu">
+          <i class="bx bx-x bx-md"></i>
+        </div>
+      </div>
+    </div>
 
     <div class="cart-container hide" id="cart-container">
       <div class="cart" id="cart">
