--- a/index.html
+++ b/index.html
@@ -78,24 +78,20 @@
       </nav>
     </header>
 
-    <div class="main-product">
-      <section id="home">
-        <div class="main-first-product">
-          <div class="first-product-img">
-            <img src="./assets/images/home.png" alt="" />
-          </div>
+    <div class="main-first-product">
+      <div class="first-product-img">
+        <img src="./assets/images/home.png" alt="" />
+      </div>
 
-          <div class="info-first-product">
-            <h1>New Sweatshirt <br /><span>COLLECTION 2022</span></h1>
-            <h3>
-              Latest arrival of the new Hanes Mid weight Crewneck sweatshirt
-              imported from the 2022 series with a modern design.
-            </h3>
-            <h2>$12.00</h2>
-            <button class="btn-add-cart">ADD TO CART</button>
-          </div>
-        </div>
-      </section>
+      <div class="info-first-product">
+        <h1>New Sweatshirt <br /><span>COLLECTION 2022</span></h1>
+        <h3>
+          Latest arrival of the new Hanes Mid weight Crewneck sweatshirt
+          imported from the 2022 series with a modern design.
+        </h3>
+        <h2>$12.00</h2>
+        <button class="btn-add-cart">ADD TO CART</button>
+      </div>
     </div>
 
     <div class="main-show-products" id="show-products">
@@ -185,35 +181,47 @@
       </div>
     </section>
 
-    <section class="our-information-container">
-      <div class="our-information">
-        <h3>Our information</h3>
-        <br />
-        <span>Toluca-México</span>
-
-        <h3>About us</h3>
-        <br />
-        <a href="·">Support Center</a><br />
-        <a href="">Customer Support</a><br />
-        <a href="">About Us</a><br />
-        <a href="">Copyright</a><br />
-        <h3>Product</h3>
-        <br />
-        <a href="·">Hoodies</a><br />
-        <a href="">Shirts</a><br />
-        <a href="">Sweatshirts</a><br />
-        <h3>Social</h3>
-        <br />
-
-        <div class="social-container">
-          <a href=""><i class="bx bxl-facebook bx-sm"></i></a>
-          <a href=""> <i class="bx bxl-twitter bx-sm"></i></a>
-          <a href=""> <i class="bx bxl-instagram-alt bx-sm"></i></a>
+    <footer class="our-information-container footer section">
+      <div class="our-information footer-container container grid">
+        <div>
+          <h3>Our information</h3>
+          <ul>
+            <li>Toluca-México</li>
+          </ul>
         </div>
 
-        <footer>&copy; ACADEMLO. All rights reserved</footer>
+        <div>
+          <h3>About us</h3>
+          <ul>
+            <li href="·">Support Center</li>
+            <li href="">Customer Support</li>
+            <li href="">About Us</li>
+            <li href="">Copyright</li>
+          </ul>
+        </div>
+
+        <div>
+          <h3>Product</h3>
+          <ul>
+            <li href="·">Hoodies</li>
+            <li href="">Shirts</li>
+            <li href="">Sweatshirts</li>
+          </ul>
+        </div>
+
+        <div>
+          <h3>Social</h3>
+          <ul>
+            <div class="social-container">
+              <a href=""><i class="bx bxl-facebook bx-sm"></i></a>
+              <a href=""> <i class="bx bxl-twitter bx-sm"></i></a>
+              <a href=""> <i class="bx bxl-instagram-alt bx-sm"></i></a>
+            </div>
+          </ul>
+        </div>
+        <span class="footer-copy">&copy; ACADEMLO. All rights reserved</span>
       </div>
-    </section>
+    </footer>
 
     <div class="menu-container hide" id="menu-container">
       <div class="menu" id="menu">
