--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="product">
           <img src="./assets/images/featured1.png" alt="" />
         </div>
-        <button class="product-counter btn1">
+        <button class="product-counter btn1 button">
           <i class="bx bx-plus"></i>
         </button>
         <div class="show-products3">
@@ -150,7 +150,7 @@
         <div class="product">
           <img src="./assets/images/featured2.png" alt="" />
         </div>
-        <button class="product-counter btn2">
+        <button class="product-counter btn2 button">
           <i class="bx bx-plus"></i>
         </button>
         <div class="show-products3">
@@ -167,7 +167,7 @@
         <div class="product">
           <img src="./assets/images/featured3.png" alt="" />
         </div>
-        <button class="product-counter btn3">
+        <button class="product-counter btn3 button">
           <i class="bx bx-plus"></i>
         </button>
         <div class="show-products3">
