--- a/index.html
+++ b/index.html
@@ -128,58 +128,7 @@
       </div>
     </div>
 
-    <section class="cart-content" id="container">
-      <div class="product-to-add">
-        <div class="product">
-          <img src="./assets/images/featured1.png" alt="" />
-        </div>
-        <button class="product-counter btn1 button">
-          <i class="bx bx-plus"></i>
-        </button>
-        <div class="show-products3">
-          <div>
-            <h4>$14.00 <span>| Stock: 10</span></h4>
-          </div>
-          <div>
-            <h4>Hoodies</h4>
-          </div>
-        </div>
-      </div>
-
-      <div class="product-to-add">
-        <div class="product">
-          <img src="./assets/images/featured2.png" alt="" />
-        </div>
-        <button class="product-counter btn2 button">
-          <i class="bx bx-plus"></i>
-        </button>
-        <div class="show-products3">
-          <div>
-            <h4>$24.00 <span>| Stock: 15</span></h4>
-          </div>
-          <div>
-            <h4>Shirts</h4>
-          </div>
-        </div>
-      </div>
-
-      <div class="product-to-add">
-        <div class="product">
-          <img src="./assets/images/featured3.png" alt="" />
-        </div>
-        <button class="product-counter btn3 button">
-          <i class="bx bx-plus"></i>
-        </button>
-        <div class="show-products3">
-          <div>
-            <h4>$24.00 <span>| Stock: 20</span></h4>
-          </div>
-          <div>
-            <h4>Sweatshirts</h4>
-          </div>
-        </div>
-      </div>
-    </section>
+    <div class="cart-content grid" id="container"></div>
 
     <footer class="our-information-container footer section">
       <div class="our-information footer-container container grid">
@@ -193,19 +142,19 @@
         <div>
           <h3>About us</h3>
           <ul>
-            <li href="·">Support Center</li>
-            <li href="">Customer Support</li>
-            <li href="">About Us</li>
-            <li href="">Copyright</li>
+            <li href="#">Support Center</li>
+            <li href="#">Customer Support</li>
+            <li href="#">About Us</li>
+            <li href="#">Copyright</li>
           </ul>
         </div>
 
         <div>
           <h3>Product</h3>
           <ul>
-            <li href="·">Hoodies</li>
-            <li href="">Shirts</li>
-            <li href="">Sweatshirts</li>
+            <li href="#">Hoodies</li>
+            <li href="#">Shirts</li>
+            <li href="#">Sweatshirts</li>
           </ul>
         </div>
 
@@ -213,14 +162,14 @@
           <h3>Social</h3>
           <ul>
             <div class="social-container">
-              <a href=""><i class="bx bxl-facebook bx-sm"></i></a>
-              <a href=""> <i class="bx bxl-twitter bx-sm"></i></a>
-              <a href=""> <i class="bx bxl-instagram-alt bx-sm"></i></a>
+              <a href="#"><i class="bx bxl-facebook bx-sm"></i></a>
+              <a href="#"> <i class="bx bxl-twitter bx-sm"></i></a>
+              <a href="#"> <i class="bx bxl-instagram-alt bx-sm"></i></a>
             </div>
           </ul>
         </div>
-        <span class="footer-copy">&copy; ACADEMLO. All rights reserved</span>
       </div>
+      <span class="footer-copy">&copy; ACADEMLO. All rights reserved</span>
     </footer>
 
     <div class="menu-container hide" id="menu-container">
@@ -239,7 +188,7 @@
       </div>
     </div>
 
-    <div class="cart-container hide" id="cart-container">
+    <div class="contenedor hide" id="contenedor">
       <div class="cart" id="cart">
         <div class="cart-close" id="close-cart">
           <i class="bx bx-x bx-md"></i>
@@ -263,6 +212,7 @@
       </div>
     </div>
 
+    <div class="card-product" style="width: 18rem"></div>
     <!--
               Contenido del carrito
           -->
