--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <div class="main-first-product" id="main-home">
       <div class="first-product-img">
-        <img src="./assets/images/home.png" alt="" />
+        <img class="first-img" src="./assets/images/home.png" alt="" />
       </div>
 
       <div class="info-first-product" id="info-first-product">
