--- a/index.html
+++ b/index.html
@@ -94,39 +94,7 @@
       </div>
     </div>
 
-    <div class="main-show-products" id="show-products">
-      <div class="show-products">
-        <div>
-          <a
-            >Show all <br />
-            <span> show all products</span></a
-          >
-        </div>
-
-        <div class="show-products1">
-          <a
-            >Shirts <br />
-            <span> 4 products</span>
-          </a>
-        </div>
-      </div>
-
-      <div class="show-products2">
-        <div>
-          <a
-            >Hoodies <br />
-            <span> 3 products</span></a
-          >
-        </div>
-
-        <div class="show-products1">
-          <a
-            >Sweatshirts <br />
-            <span> 4 products</span>
-          </a>
-        </div>
-      </div>
-    </div>
+    <ul class="main-show-products grid" id="show-products"></ul>
 
     <div class="cart-content grid" id="container"></div>
 
