--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
       </div>
     </div>
 
-    <ul class="main-show-products grid" id="show-products"></ul>
+    <div class="main-show-products grid" id="show-products">
+      <div class="show-products"></div>
+      <button class="product-counter" id="product-counter">+</button>
+    </div>
 
     <div class="cart-content grid" id="container"></div>
 
@@ -165,7 +168,9 @@
         <div id="my-cart-content"></div>
         <div class="my-cart"><h3>My Cart</h3></div>
 
-        <div class="empty-car-img">
+        <div class="carrito" id="carrito">
+          <div class="emptyCart" id="emptyCart">
+         <div class="empty-car-img">
           <img src="./assets/images/empty-cart.png" alt="" />
         </div>
 
@@ -176,7 +181,7 @@
             >You can add items to you cart by clicking on the "+" button on the
             product page.</span
           >
-        </div>
+        </div> 
       </div>
     </div>
 
